    action is now a synonym for "r" (replace).  Also, the script has been
    ignoring the "v" (verbose) modifier already since Automake 1.11.3.

  - When the 'compile' script is used to wrap MSVC, it now accepts an
    optional space between the -I, -L and -l options and their respective
    arguments, for better POSIX compliance.

Bugs fixed in 1.11.0a:

* Bugs introduced by 1.11.2:

  - Automake now correctly recognizes the prefix/primary combination
   `pkglibexec_SCRIPTS' as valid.

  - A definition of 'noinst_PYTHON' before 'python_PYTHON' (or similar)
    don't cause spurious failures upon "make install" anymore.

* Bugs introduced by 1.11:

  - The parallel-tests harness doesn't trip anymore on sed implementations
    with stricter limits on the length of input lines (problem seen at
    least on Solaris 8).

  - The `parallel-tests' test driver works around a GNU make 3.80 bug with
    trailing white space in the test list (`TESTS = foo $(EMPTY)'), and
    does not report spurious successes when used with concurrent FreeBSD
    make (e.g., "make check -j3").

  - When the parallel-tests driver is in use, automake now explicitly
    rejects invalid entries and conditional contents in TEST_EXTENSIONS,
    instead of issuing confusing and apparently unrelated error messages
    (e.g., "non-POSIX variable name", "bad characters in variable name",
    or "redefinition of TEST_EXTENSIONS), or even, in some situations,
    silently producing broken `Makefile.in' files.

  - The `silent-rules' option now truly silences all compile rules, even
    when dependency tracking is disabled.  Also, when `silent-rules' is
    not used, `make' output no longer contains spurious backslash-only
    lines, thus once again matching what Automake did before 1.11.

  - The `silent-rules' option now generates working makefiles even for
    the uncommon `make' implementations that do not support the
    nested-variables extension to POSIX 2008.  For such `make'