@@ -73,6 +73,7 @@ Dave Brolley		brolley@redhat.com
 Dave Korn		dave.korn.cygwin@googlemail.com
 Dave Morrison		dave@bnl.gov
 David A. Swierczek	swiercze@mr.med.ge.com
+David A. Wheeler	dwheeler@dwheeler.com
 David Byron		dbyron@dbyron.com
 Davyd Madeley		davyd@fugro-fsi.com.au
 David Pashley		david@davidpashley.com
@@ -149,6 +150,7 @@ Janos Farkas		chexum@shadow.banki.hu
 Jared Davis		abiword@aiksaurus.com
 Jason Duell		jcduell@lbl.gov
 Jason Molenda		crash@cygnus.co.jp
+Javier Jardón		jjardon@gnome.org
 Jeff Bailey		Jbailey@phn.ca
 Jeff Garzik		jgarzik@pobox.com
 Jeff Squyres		jsquyres@lam-mpi.org
